syntax = "proto3";

package micro.apps.proto.linking.v1;

option java_multiple_files = true;
option java_outer_classname = "LinkingServiceProto";
option java_package = "micro.apps.proto.linking.v1";

import "micro/apps/proto/common/v1/common.proto";

service LinkingService {
    rpc Link(LinkRequest) returns (LinkResponse);
    rpc LinkStream(stream LinkRequest) returns (stream LinkResponse) {}
}

message LinkRequest {
    micro.apps.proto.common.v1.Profile profile = 1;
    micro.apps.proto.common.v1.Person person = 2;
    repeated micro.apps.proto.common.v1.Address addresses = 3;
}

message LinkResponse {
    optional string person_id = 1;
    micro.apps.proto.common.v1.Status status = 2;
}
